--- a/src/scss/_sprite.scss
+++ b/src/scss/_sprite.scss
@@ -9,149 +9,160 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
+$boat-1-name: 'boat.1';
+$boat-1-x: 0px;
+$boat-1-y: 0px;
+$boat-1-offset-x: 0px;
+$boat-1-offset-y: 0px;
+$boat-1-width: 100px;
+$boat-1-height: 101px;
+$boat-1-total-width: 430px;
+$boat-1-total-height: 272px;
+$boat-1-image: '/sprite.png';
+$boat-1: (0px, 0px, 0px, 0px, 100px, 101px, 430px, 272px, '/sprite.png', 'boat.1', );
 $boat-name: 'boat';
-$boat-x: 0px;
+$boat-x: 110px;
 $boat-y: 0px;
-$boat-offset-x: 0px;
+$boat-offset-x: -110px;
 $boat-offset-y: 0px;
 $boat-width: 100px;
 $boat-height: 101px;
-$boat-total-width: 320px;
-$boat-total-height: 317px;
-$boat-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$boat: (0px, 0px, 0px, 0px, 100px, 101px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'boat', );
+$boat-total-width: 430px;
+$boat-total-height: 272px;
+$boat-image: '/sprite.png';
+$boat: (110px, 0px, -110px, 0px, 100px, 101px, 430px, 272px, '/sprite.png', 'boat', );
 $branch-copy-name: 'branch copy';
-$branch-copy-x: 220px;
+$branch-copy-x: 110px;
 $branch-copy-y: 111px;
-$branch-copy-offset-x: -220px;
+$branch-copy-offset-x: -110px;
 $branch-copy-offset-y: -111px;
 $branch-copy-width: 100px;
 $branch-copy-height: 100px;
-$branch-copy-total-width: 320px;
-$branch-copy-total-height: 317px;
-$branch-copy-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$branch-copy: (220px, 111px, -220px, -111px, 100px, 100px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'branch copy', );
+$branch-copy-total-width: 430px;
+$branch-copy-total-height: 272px;
+$branch-copy-image: '/sprite.png';
+$branch-copy: (110px, 111px, -110px, -111px, 100px, 100px, 430px, 272px, '/sprite.png', 'branch copy', );
 $branch-name: 'branch';
-$branch-x: 110px;
+$branch-x: 220px;
 $branch-y: 111px;
-$branch-offset-x: -110px;
+$branch-offset-x: -220px;
 $branch-offset-y: -111px;
 $branch-width: 100px;
 $branch-height: 100px;
-$branch-total-width: 320px;
-$branch-total-height: 317px;
-$branch-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$branch: (110px, 111px, -110px, -111px, 100px, 100px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'branch', );
+$branch-total-width: 430px;
+$branch-total-height: 272px;
+$branch-image: '/sprite.png';
+$branch: (220px, 111px, -220px, -111px, 100px, 100px, 430px, 272px, '/sprite.png', 'branch', );
 $d-facebook-name: 'd-facebook';
-$d-facebook-x: 92px;
-$d-facebook-y: 281px;
-$d-facebook-offset-x: -92px;
-$d-facebook-offset-y: -281px;
+$d-facebook-x: 390px;
+$d-facebook-y: 110px;
+$d-facebook-offset-x: -390px;
+$d-facebook-offset-y: -110px;
 $d-facebook-width: 36px;
 $d-facebook-height: 36px;
-$d-facebook-total-width: 320px;
-$d-facebook-total-height: 317px;
-$d-facebook-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$d-facebook: (92px, 281px, -92px, -281px, 36px, 36px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'd-facebook', );
+$d-facebook-total-width: 430px;
+$d-facebook-total-height: 272px;
+$d-facebook-image: '/sprite.png';
+$d-facebook: (390px, 110px, -390px, -110px, 36px, 36px, 430px, 272px, '/sprite.png', 'd-facebook', );
 $d-instagram-name: 'd-instagram';
-$d-instagram-x: 240px;
-$d-instagram-y: 221px;
-$d-instagram-offset-x: -240px;
-$d-instagram-offset-y: -221px;
+$d-instagram-x: 330px;
+$d-instagram-y: 170px;
+$d-instagram-offset-x: -330px;
+$d-instagram-offset-y: -170px;
 $d-instagram-width: 36px;
 $d-instagram-height: 36px;
-$d-instagram-total-width: 320px;
-$d-instagram-total-height: 317px;
-$d-instagram-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$d-instagram: (240px, 221px, -240px, -221px, 36px, 36px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'd-instagram', );
+$d-instagram-total-width: 430px;
+$d-instagram-total-height: 272px;
+$d-instagram-image: '/sprite.png';
+$d-instagram: (330px, 170px, -330px, -170px, 36px, 36px, 430px, 272px, '/sprite.png', 'd-instagram', );
 $d-twitter-name: 'd-twitter';
-$d-twitter-x: 46px;
-$d-twitter-y: 281px;
-$d-twitter-offset-x: -46px;
-$d-twitter-offset-y: -281px;
+$d-twitter-x: 376px;
+$d-twitter-y: 170px;
+$d-twitter-offset-x: -376px;
+$d-twitter-offset-y: -170px;
 $d-twitter-width: 36px;
 $d-twitter-height: 36px;
-$d-twitter-total-width: 320px;
-$d-twitter-total-height: 317px;
-$d-twitter-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$d-twitter: (46px, 281px, -46px, -281px, 36px, 36px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'd-twitter', );
+$d-twitter-total-width: 430px;
+$d-twitter-total-height: 272px;
+$d-twitter-image: '/sprite.png';
+$d-twitter: (376px, 170px, -376px, -170px, 36px, 36px, 430px, 272px, '/sprite.png', 'd-twitter', );
 $d-youtube-name: 'd-youtube';
-$d-youtube-x: 0px;
-$d-youtube-y: 281px;
-$d-youtube-offset-x: 0px;
-$d-youtube-offset-y: -281px;
+$d-youtube-x: 180px;
+$d-youtube-y: 222px;
+$d-youtube-offset-x: -180px;
+$d-youtube-offset-y: -222px;
 $d-youtube-width: 36px;
 $d-youtube-height: 36px;
-$d-youtube-total-width: 320px;
-$d-youtube-total-height: 317px;
-$d-youtube-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$d-youtube: (0px, 281px, 0px, -281px, 36px, 36px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'd-youtube', );
+$d-youtube-total-width: 430px;
+$d-youtube-total-height: 272px;
+$d-youtube-image: '/sprite.png';
+$d-youtube: (180px, 222px, -180px, -222px, 36px, 36px, 430px, 272px, '/sprite.png', 'd-youtube', );
 $leaf-name: 'leaf';
-$leaf-x: 0px;
-$leaf-y: 111px;
-$leaf-offset-x: 0px;
-$leaf-offset-y: -111px;
+$leaf-x: 330px;
+$leaf-y: 0px;
+$leaf-offset-x: -330px;
+$leaf-offset-y: 0px;
 $leaf-width: 100px;
 $leaf-height: 100px;
-$leaf-total-width: 320px;
-$leaf-total-height: 317px;
-$leaf-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$leaf: (0px, 111px, 0px, -111px, 100px, 100px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'leaf', );
+$leaf-total-width: 430px;
+$leaf-total-height: 272px;
+$leaf-image: '/sprite.png';
+$leaf: (330px, 0px, -330px, 0px, 100px, 100px, 430px, 272px, '/sprite.png', 'leaf', );
 $m-facebook-name: 'm-facebook';
-$m-facebook-x: 120px;
-$m-facebook-y: 221px;
-$m-facebook-offset-x: -120px;
-$m-facebook-offset-y: -221px;
+$m-facebook-x: 330px;
+$m-facebook-y: 110px;
+$m-facebook-offset-x: -330px;
+$m-facebook-offset-y: -110px;
 $m-facebook-width: 50px;
 $m-facebook-height: 50px;
-$m-facebook-total-width: 320px;
-$m-facebook-total-height: 317px;
-$m-facebook-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$m-facebook: (120px, 221px, -120px, -221px, 50px, 50px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'm-facebook', );
+$m-facebook-total-width: 430px;
+$m-facebook-total-height: 272px;
+$m-facebook-image: '/sprite.png';
+$m-facebook: (330px, 110px, -330px, -110px, 50px, 50px, 430px, 272px, '/sprite.png', 'm-facebook', );
 $m-instagram-name: 'm-instagram';
-$m-instagram-x: 60px;
-$m-instagram-y: 221px;
-$m-instagram-offset-x: -60px;
-$m-instagram-offset-y: -221px;
+$m-instagram-x: 0px;
+$m-instagram-y: 222px;
+$m-instagram-offset-x: 0px;
+$m-instagram-offset-y: -222px;
 $m-instagram-width: 50px;
 $m-instagram-height: 50px;
-$m-instagram-total-width: 320px;
-$m-instagram-total-height: 317px;
-$m-instagram-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$m-instagram: (60px, 221px, -60px, -221px, 50px, 50px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'm-instagram', );
+$m-instagram-total-width: 430px;
+$m-instagram-total-height: 272px;
+$m-instagram-image: '/sprite.png';
+$m-instagram: (0px, 222px, 0px, -222px, 50px, 50px, 430px, 272px, '/sprite.png', 'm-instagram', );
 $m-twitter-name: 'm-twitter';
-$m-twitter-x: 180px;
-$m-twitter-y: 221px;
-$m-twitter-offset-x: -180px;
-$m-twitter-offset-y: -221px;
+$m-twitter-x: 60px;
+$m-twitter-y: 222px;
+$m-twitter-offset-x: -60px;
+$m-twitter-offset-y: -222px;
 $m-twitter-width: 50px;
 $m-twitter-height: 50px;
-$m-twitter-total-width: 320px;
-$m-twitter-total-height: 317px;
-$m-twitter-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$m-twitter: (180px, 221px, -180px, -221px, 50px, 50px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'm-twitter', );
+$m-twitter-total-width: 430px;
+$m-twitter-total-height: 272px;
+$m-twitter-image: '/sprite.png';
+$m-twitter: (60px, 222px, -60px, -222px, 50px, 50px, 430px, 272px, '/sprite.png', 'm-twitter', );
 $m-youtube-name: 'm-youtube';
-$m-youtube-x: 0px;
-$m-youtube-y: 221px;
-$m-youtube-offset-x: 0px;
-$m-youtube-offset-y: -221px;
+$m-youtube-x: 120px;
+$m-youtube-y: 222px;
+$m-youtube-offset-x: -120px;
+$m-youtube-offset-y: -222px;
 $m-youtube-width: 50px;
 $m-youtube-height: 50px;
-$m-youtube-total-width: 320px;
-$m-youtube-total-height: 317px;
-$m-youtube-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$m-youtube: (0px, 221px, 0px, -221px, 50px, 50px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'm-youtube', );
+$m-youtube-total-width: 430px;
+$m-youtube-total-height: 272px;
+$m-youtube-image: '/sprite.png';
+$m-youtube: (120px, 222px, -120px, -222px, 50px, 50px, 430px, 272px, '/sprite.png', 'm-youtube', );
 $product-more-info-name: 'product-more-info';
-$product-more-info-x: 286px;
-$product-more-info-y: 221px;
-$product-more-info-offset-x: -286px;
-$product-more-info-offset-y: -221px;
+$product-more-info-x: 226px;
+$product-more-info-y: 222px;
+$product-more-info-offset-x: -226px;
+$product-more-info-offset-y: -222px;
 $product-more-info-width: 18px;
 $product-more-info-height: 18px;
-$product-more-info-total-width: 320px;
-$product-more-info-total-height: 317px;
-$product-more-info-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$product-more-info: (286px, 221px, -286px, -221px, 18px, 18px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'product-more-info', );
+$product-more-info-total-width: 430px;
+$product-more-info-total-height: 272px;
+$product-more-info-image: '/sprite.png';
+$product-more-info: (226px, 222px, -226px, -222px, 18px, 18px, 430px, 272px, '/sprite.png', 'product-more-info', );
 $tree-name: 'tree';
 $tree-x: 220px;
 $tree-y: 0px;
@@ -159,26 +170,26 @@ $tree-offset-x: -220px;
 $tree-offset-y: 0px;
 $tree-width: 100px;
 $tree-height: 101px;
-$tree-total-width: 320px;
-$tree-total-height: 317px;
-$tree-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$tree: (220px, 0px, -220px, 0px, 100px, 101px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'tree', );
+$tree-total-width: 430px;
+$tree-total-height: 272px;
+$tree-image: '/sprite.png';
+$tree: (220px, 0px, -220px, 0px, 100px, 101px, 430px, 272px, '/sprite.png', 'tree', );
 $whale-name: 'whale';
-$whale-x: 110px;
-$whale-y: 0px;
-$whale-offset-x: -110px;
-$whale-offset-y: 0px;
+$whale-x: 0px;
+$whale-y: 111px;
+$whale-offset-x: 0px;
+$whale-offset-y: -111px;
 $whale-width: 100px;
 $whale-height: 101px;
-$whale-total-width: 320px;
-$whale-total-height: 317px;
-$whale-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$whale: (110px, 0px, -110px, 0px, 100px, 101px, 320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', 'whale', );
-$spritesheet-width: 320px;
-$spritesheet-height: 317px;
-$spritesheet-image: 'http://localhost:3333/public/images/sprite/sprite.png';
-$spritesheet-sprites: ($boat, $branch-copy, $branch, $d-facebook, $d-instagram, $d-twitter, $d-youtube, $leaf, $m-facebook, $m-instagram, $m-twitter, $m-youtube, $product-more-info, $tree, $whale, );
-$spritesheet: (320px, 317px, 'http://localhost:3333/public/images/sprite/sprite.png', $spritesheet-sprites, );
+$whale-total-width: 430px;
+$whale-total-height: 272px;
+$whale-image: '/sprite.png';
+$whale: (0px, 111px, 0px, -111px, 100px, 101px, 430px, 272px, '/sprite.png', 'whale', );
+$spritesheet-width: 430px;
+$spritesheet-height: 272px;
+$spritesheet-image: '/sprite.png';
+$spritesheet-sprites: ($boat-1, $boat, $branch-copy, $branch, $d-facebook, $d-instagram, $d-twitter, $d-youtube, $leaf, $m-facebook, $m-instagram, $m-twitter, $m-youtube, $product-more-info, $tree, $whale, );
+$spritesheet: (430px, 272px, '/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
