--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,8 +2,8 @@
 
 body{
     background: #333;
-    color: #fff;
+    color: #FFF;
     .tree{
-        @include sprite($d-facebook)
+        @include sprite($branch)
     }
 }
